# CRS-Bot

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  ROADMAP.md  config.yaml  docker-compose.yml  github_release.py  last_version.json  pyproject.toml  pytest.ini  requirements.txt  setup.py  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: check_release.yaml  codeql.yml  dependabot-auto-merge.yml  dependency-update.yml  docker-test.yml  manual-dependabot.yml  rerun-tests.yml  sonarcloud.yml  test.yaml
data/: last_version.json
tests/: __init__.py  conftest.py  test_config.py  test_config.yaml  test_discord.py  test_github.py  test_github_release.py  test_version.py
